--- a/test.html
+++ b/test.html
@@ -4,22 +4,9 @@
         <meta charset="utf-8">
     </head>
     <body>
+     <img src="样式堆叠顺序.png" alt="">
     </body>
 </html>
 <script>
-    function Foo() {
-    var i = 0;
-    return function() {
-        console.log(i++);
-    }
-}
 
-// Foo();
-
-var f1 = Foo(),
-    f2 = Foo();
-    console.log(f1===f2);
-f1();
-f1();
-f2();
 </script>
