单例模式写错了

--- a/设计模式.html
+++ b/设计模式.html
@@ -74,7 +74,7 @@
 
         return function createPerson(name) {
             if (!instance) {
-                return init(name);
+                instance = init(name);
             }
 
             return instance
