--- a/设计模式.html
+++ b/设计模式.html
@@ -81,6 +81,9 @@
         }  
     };
     
+    var obj1 = Person.createPerson('xiaoming');
+    var obj2 = Person.createPerson('limei');
+
     //6.订阅发布模式
     var PubSub = function () {
         this.eventPool = {};          
