--- a/面试/10.js的运行机制.html
+++ b/面试/10.js的运行机制.html
@@ -18,7 +18,7 @@
         setTimeout setInterval
         DOM事件
             addEventListener
-        ES6中的Pormise
+        ES6中的Pormise, ajax
             
 
     同步任务 优先 异步任务执行 所以setTimeout 为0时会后执行
