--- a/面试/02.盒模型/01.css盒模型.html
+++ b/面试/02.盒模型/01.css盒模型.html
@@ -11,6 +11,9 @@
     标准模型和ie模型的区别
     css如何设置两种模型
     js如何获取盒模型对应的宽和高
+        dom.style.width/height
+        window.getComputedStyle(dom).width
+        dom.getBoundingClientRect().width/height
     实例题
     BFC边距重叠的解决方案
     
