拼地图代码

--- a/01.test.html
+++ b/01.test.html
@@ -40,3 +40,15 @@
 </body>
 
 </html>
+<script>
+var str = '河北省';
+var arrstr = [{name:'河北省'}];
+
+
+var newStr = str.match('河北省');
+
+
+
+
+console.log(newStr);
+</script>
