--- a/mianmainmain/13.mvvm.html
+++ b/mianmainmain/13.mvvm.html
@@ -10,5 +10,12 @@
         view是与用户进行交互的桥梁
 
         ViewModel充当数据装换器，将Model信息转换为View的信息，讲命令从View传递到Model
+
+        
+        MVVM是一种软件构架模式，MVVM有助于前后端分离。View视图层，粗略理解为DOM。Model:与数据库对应的model,
+        一般为json格式，作为req的body通过https与数据库实现通信。ViewModel:view与Model通过VM实现双向绑定。
+
+        核心是提供对View和View的双向数据绑定，这样使得ViewModel的改变View立即改变。
+
     </body>
 </html>
