--- a/01.test.html
+++ b/01.test.html
@@ -26,6 +26,12 @@
             height: 80px;
         }
     </style>
+    <script>
+
+        var width = document.documentElement.clientWidth;
+        document.documentElement.style.fontSize = width/10;
+        
+    </script>
 </head>
 <body>
     <li>1</li>
