--- a/01.test.html
+++ b/01.test.html
@@ -1,52 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        li{
-            border: 1px solid;
-            float: left;
-            list-style: none;
-            width: 30px;
+        @font-face {
+            font-family: Helvetica;
+            src: url('../Helvetica.ttf');
         }
-        
-        /* 奇数 */
-        li:nth-child(odd){
-            border-color: red;
-            height: 50px;
-        }
-        /* 3.3 3.6 */
-        /* 偶数 */
-        li:nth-child(even){
-            border-color: green;
-            width: 30px;
-            height: 80px;
+
+        .nihao {
+            font-family: 'Helvetica';
         }
     </style>
-    <script>
-
-        var width = document.documentElement.clientWidth;
-        document.documentElement.style.fontSize = width/10;
-        
-    </script>
 </head>
+
 <body>
-    <li>1</li>
-    <li>2</li>
-    <li>3</li>
-    <li>4</li>
-    <li>5</li>
-    <li>6</li>
-    <li>7</li>
-    <li>8</li>
-    <li>9</li>
-    <li>10</li>
+    <div class="nihao">
+        你好啊
+    </div>
 </body>
+
 </html>
-<script>
-    var liArr = document.getElementsByTagName('li');
-    console.log(liArr);
-</script>
