数据绑定原理

--- a/01.test.html
+++ b/01.test.html
@@ -1,44 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        input[type="text"i]:disabled {
-            background: white;
-        }
-    </style>
 </head>
-
 <body>
-    <div>
-        <h2>一级</h2>
-        <ul>
-            <li>
-                <h4>二级</h4>
-                <ul>
-                    <li>三级</li>
-                    <li>三级</li>
-                    <li>三级</li>
-                </ul>
-            </li>
-            <li>二级</li>
-            <li>二级</li>
-            <li>二级</li>
-        </ul>
-    </div>
-
+    
 </body>
-
 </html>
 <script>
-    var data = {
-        '一级':{
-            title: '一级'
-            sub:[{},{},{}]
-        }
-    }
+var num = 1000;
+
+setInterval(function () { 
+    num -= 0;
+
+    console.log(num);
+}, 500);
 </script>
