--- a/01.test.html
+++ b/01.test.html
@@ -6,151 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-    div {
-      width: 30px;
-      height: 30px;
-      border: 1px solid #b598e4;
-    }
-  </style>
 </head>
 
 <body>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
+  隆基泰和决策指挥系统 前端开发
+  龙湖易览可视化平台 前端开发
+  万达云上丹寨摄影大赛项目 前端开发
+  
 </body>
 
 </html>
-<script src="http://apps.bdimg.com/libs/jquery/1.6.4/jquery.js"></script>
-<script>
-  $(function () {
-    var color = ['#0777f8', '#f80707', '#f8c007', '#53f807', '#078cf8', '#0717f8', '#a007f8', '#f807d8']
-
-    var getRandomColor = function () {
-      return '#' + Math.floor(Math.random() * 16777215).toString(16);
-    }
-
-    for (let i = 0; i < 90; i++) {
-      color.push(getRandomColor())
-    }
-
-    var arr = [
-      "#0777f8", "#f80707", "#f8c007", "#53f807", "#078cf8", "#0717f8", "#a007f8", "#f807d8", "#d90e3c",
-      "#eef414", "#ad313a", "#c5555", "#b1ceb4",
-      "#1a23da", "#a73fb3", "#a1de27", "#86be70", "#3e5b6c",
-      "#55db59", "#7718b9", "#a8b908", "#35f4d9", "#a75231", "#bb9530", "#36dd4d", "#cc6e5d", "#d1ca59",
-      "#d55b8e", "#f987a1", "#ca1ec", "#272aef", "#915daa", "#2adb10", "#6a6ac2", "#30d2cb", "#802467", "#5a3737",
-      "#b4724d", "#96210", "#f3ae8b", "#682e74", "#8134a9", "#6c8539", "#2a8429", "#79c8cd", "#cbefd6", "#2ba75d",
-      "#cce3aa", "#812128", "#ae1c49", "#5ee083", "#31ee0c", "#fb8844", "#b43cbf", "#f231ae", "#e0ef5", "#a6e31e",
-      "#7012a9", "#515730", "#5890dc", "#adaef4", "#d9c836", "#9c966e", "#9cf18f", "#e2d454", "#8b6900",
-      "#896289", "#a2008c", "#e4527", "#e8e4fc", "#e1b497", "#1e042c", "#d582ee", "#73e83a", "#fb88dd", "#cb42a3",
-      "#c8b336", "#3155df", "#529699", "#3fc445", "#9769fc", "#3f109b", "#d3c7b", "#e8b7d7", "#6164ea", "#cb7377",
-      "#8bdd37", "#43cf2c", "#40f7c4", "#99bf22", "#950f50", "#ad6962", "#cc919d", "#57e3ba", "#41f39e",
-      "#41bb87", "#53ec25"
-    ]
-
-    console.log(JSON.stringify(color))
-
-    $('div').each(function (ele) {
-      $(this).css('background', color[ele])
-    })
-  })
-</script>
